# link-checker

./: .gitignore  README.md  format.sh  pyproject.toml
.github/workflows/: check-page.yml  check-sitemap.yml
app/: generate-pages-list.py  generate-sitemap-links-list.py  link-checker.py  page-link-checker.py  sitemap-link-checker.py
app/lib/: parse_html_page.py  parse_xml_sitemap.py
